...
            <TypeBadge key={type.name} typeName={type.name as keyof typeof Colors.types} />
          ))}
        </View>
      </View>

      <View style={styles.section}>
        <Text style={styles.sectionTitle}>Pokédex Entry</Text>
        <Text style={styles.descriptionText}>{description}</Text>
        {details?.stats.map(({ stat, base_stat }) => (
          <View key={stat.name} style={styles.statRow}>
            <Text style={styles.statName}>{stat.name.replace('-', ' ')}</Text>
            <Text style={styles.statValue}>{base_stat}</Text>
            <View style={styles.statBarBackground}>
...
