appId: com.anonymous.minidex
---
# Teste E2E 4: Navegação entre tabs

- launchApp

- extendedWaitUntil:
    visible: ".*Bulbasaur.*"
    timeout: 20000

- tapOn: "Favorites"

- extendedWaitUntil:
    visible: ".*favorite.*"
    timeout: 3000

- tapOn: "Pokedex"

- extendedWaitUntil:
    visible: "Sort Options"
    timeout: 3000
