appId: com.anonymous.minidex
---
# Teste E2E 2: Navegação para detalhes

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: ".*Bulbasaur.*"
    timeout: 20000

- tapOn: "bulbasaur"

- extendedWaitUntil:
    visible: "Pokédex Entry"
    timeout: 8000

- back

- extendedWaitUntil:
    visible: "Sort Options"
    timeout: 3000
