appId: com.anonymous.minidex
---
# Teste E2E 3: Ordenação da lista

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: ".*Bulbasaur.*"
    timeout: 25000

- tapOn: "Sort Options"

- extendedWaitUntil:
    visible: "Sort by Name"
    timeout: 2000
- tapOn: "Sort by Name"

- tapOn: "Sort Options"

- extendedWaitUntil:
    visible: "Sort by Number"
    timeout: 2000
- tapOn: "Sort by Number"

- assertVisible: "Sort Options"
