appId: com.anonymous.minidex
---
# Teste E2E 1: Busca de Pokémon

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible: ".*Bulbasaur.*"
    timeout: 15000

- tapOn: "Search Pokémon..."
- inputText: "pikachu"
- hideKeyboard

- extendedWaitUntil:
    visible: ".*Pikachu.*"
    timeout: 3000

- tapOn: "Search Pokémon"
- eraseText: 10
- inputText: "xyz123"
- hideKeyboard

- extendedWaitUntil:
    visible: "No results."
    timeout: 2000
